# METIS

./: CMakeLists.txt
include/: metis.h
libmetis/: CMakeLists.txt  METISConfig.cmake.in
programs/: CMakeLists.txt
